<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/header_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_double_view"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_thumb_app_hay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_noimage"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_title_app"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:lines="1"
            android:padding="8dp"
            android:text="ALO"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_content_dialog"
        style="@style/TextAppearance.Sherlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_dialog"
        android:layout_margin="@dimen/space_between_double_view"
        android:text="@string/open_app_hay"
        android:textColor="@color/color_text_bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_content_dialog"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/but_co"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_ungdung_hay_co" />

        <Button
            android:id="@+id/but_desau"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_ungdung_hay_desau" />

        <Button
            android:id="@+id/but_khong"
            style="@style/TextAppearance.Sherlock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_ungdung_hay_khongcai" />
    </LinearLayout>

</RelativeLayout>