<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ikaratruyen.MainActivity" >

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_between_double_view"
        android:background="@drawable/boder_header_detail"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Sherlock.Widget.PopupMenu.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_between_view"
            android:ellipsize="marquee"
            android:lines="1"
            android:text="Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="@dimen/img_total_w"
                android:layout_height="@dimen/img_detail_thumb_h" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="@dimen/img_detail_thumb_gosach"
                        android:layout_height="@dimen/img_detail_thumb_h"
                        android:background="@drawable/icon_gaysach"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:id="@+id/img_thumb_detail"
                        android:layout_width="@dimen/img_detail_thumb_w"
                        android:layout_height="@dimen/img_detail_thumb_h"
                        android:background="@drawable/bg_noimage"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white_opacity"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_book_oepn_press" />

                    <TextView
                        android:id="@+id/tv_read_count"
                        style="@style/Sherlock.__TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/grey_text"
                        android:textSize="9sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_view_small" />

                    <TextView
                        android:id="@+id/tv_count_view"
                        style="@style/Sherlock.__TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="12345"
                        android:textColor="@color/grey_text"
                        android:textSize="9sp" />
                </LinearLayout>

                <!--  -->
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_detail_thumb_h"
                android:layout_marginLeft="@dimen/space_between_double_view"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_between_view"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_author" />

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Author"
                        android:textColor="@color/grey" />
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ProgressBar
                            android:id="@+id/prog_loading"
                            style="@style/Sherlock.__Widget.Holo.Spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />
                    </RelativeLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/prg_download"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/img_total_w"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:progressDrawable="@drawable/progressbar_download" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="0%"
                android:textColor="@color/black" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/but_read"
                    style="@style/Sherlock.__TextAppearance.Small"
                    android:layout_width="@dimen/img_detail_thumb_w"
                    android:layout_height="32dp"
                    android:layout_margin="@dimen/space_between_view"
                    android:background="@drawable/bg_button_read"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/title_read"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/img_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/icon_heart" />

                    <TextView
                        android:id="@+id/tv_like"
                        style="@style/Sherlock.__TextAppearance.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_like" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RatingBar
                    android:id="@+id/rate_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:numStars="5"
                    android:progress="4" />

                <TextView
                    android:id="@+id/tv_rate"
                    style="@style/Sherlock.__TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/space_between_view"
                    android:text="0.0"
                    android:textColor="@color/grey" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list_chap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/space_between_double_view"
        android:layout_marginLeft="@dimen/space_between_double_view"
        android:layout_marginRight="@dimen/space_between_double_view"
        android:background="@drawable/boder_header_detail" >
    </ListView>

</LinearLayout>